<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <TextView
        android:id="@+id/tvChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="64dp"
        android:text="@string/Change_password"
        android:textSize="42sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etNewPassword"
        android:layout_width="336dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:inputType="textPassword"
        android:hint="@string/new_password"
        app:layout_constraintStart_toStartOf="@+id/tvChangePassword"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePassword" />

    <EditText
        android:id="@+id/etTypeAgain"
        android:layout_width="336dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:textSize="24sp"
        android:inputType="textPassword"
        android:hint="@string/type_again"
        app:layout_constraintStart_toStartOf="@+id/etNewPassword"
        app:layout_constraintTop_toBottomOf="@+id/etNewPassword" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="336dp"
        android:layout_height="72dp"
        android:layout_marginTop="16dp"
        android:textSize="18sp"
        android:text="@string/submit"
        app:layout_constraintStart_toStartOf="@+id/etTypeAgain"
        app:layout_constraintTop_toBottomOf="@+id/etTypeAgain" />

</androidx.constraintlayout.widget.ConstraintLayout>